# gcl

./: .gitignore  CMakeLists.txt  README.md
examples/: .gitignore  CMakeLists.txt  branch.cpp  heavy.cpp  ma.cpp  main.cpp
include/: Buffer.h  GCLContext.h  Kernel.h
kernels/: branch.comp  compile.sh  heavy.comp  ma.comp  t.comp
source/: Buffer.cpp  CMakeLists.txt  GCLContext.cpp  Kernel.cpp  VulkanContext.cpp  VulkanContext.in.h
test/benchmarks/: bm.cpp  bm.md
